# llm-council

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: agent_router.py  answer_cache.py  config.py  council.py  eta.py  main.py  metrics.py  migrate_json_to_sqlite.py  observability.py  openrouter.py  provider_results.py  storage.py  usage.py
docs/: MIGRATION_FROM_CLAUDE_REVIEWER.md  answer-cache-metrics.md  architecture.md  bineval-ab-plan.md  bineval-results.md  bineval-writeup.md  demo.sh  improvement-done.md  improvement-loop-log.md  improvement-plan.md  judge-evaluation.md  plan-to-improve.md  self-evaluation-asymmetry.md
mcp_server/: README.md  __init__.py  requirements.txt  server.py  test_server.py
output/: benchmark-questions.md  binary-ab-3way-live.json  binary-ab-live.json  binary-ab-truthfulqa-live.json  binary_ab_truthfulqa.json  bineval_questions_consistency.json  council-benchmark-r2.json  council-benchmark-v2-r2.json  council-benchmark-v2.json  council-benchmark.json  council-on-benchmark.md  stage2-bias-live.json
scripts/: agent_routing_benchmark.py  answer_cache_replay.py  audit_eval_leakage.py  audit_mcp_surface.py  bineval_replication.py  council_model_benchmark.py  gen_benchmark_questions.py  judge_binary_ab.py  judge_eval_smoke.py  mcp_tool_surface_snapshot.json  openrouter_catalog_probe.py  rerun_questions.py  run_council_on_benchmark.py  self_eval_asymmetry.py  stage2_position_bias.py
tests/: conftest.py  test_agent_routing.py  test_answer_cache.py  test_answer_check.py  test_bineval.py  test_chairman_attribution.py  (+25 more)
(+37 files in other folders)
